// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottom tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottom"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="bottom"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp inherit tooltipTriangleBottom"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottomLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottomLeft"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="bottomLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp inherit tooltipTriangleBottomLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipBottomRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleBottomRight"
      color="white"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="bottomRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleUp inherit tooltipTriangleBottomRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleRight"
      color="white"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="middle"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft inherit tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleLeft"
      color="white"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="middleLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleRight inherit tooltipTriangleMiddleLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleMiddleRight"
      color="white"
      contentEditable={false}
      direction="left"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="middleRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleLeft inherit tooltipTriangleMiddleRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className=""
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown inherit"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTop tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTop"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="top"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown inherit tooltipTriangleTop"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTopLeft tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTopLeft"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="topLeft"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown inherit tooltipTriangleTopLeft"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  backgroundColor="gray"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="white"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  show={false}
  sizing="inherit"
  style={Object {}}
  visible={true}
  width=""
>
  <div
    className="ui-tooltip tooltip tooltipTopRight tooltipHide inherit"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "gray",
      }
    }
  >
    <span
      className="ui-tooltip-content inherit"
      style={
        Object {
          "color": "white",
        }
      }
    >
      Test Text
    </span>
    <Triangle
      backgroundColor="gray"
      borderColor="inherit"
      borderWidth="none"
      className="tooltipTriangleTopRight"
      color="white"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="topRight"
      nobase={false}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      show={false}
      sizing="inherit"
      style={Object {}}
      visible={true}
      width=""
    >
      <svg
        className="ui-triangle triangle normalBox triangleDown inherit tooltipTriangleTopRight"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "fill": "gray",
            "stroke": "inherit",
            "strokeWidth": "none",
          }
        }
        version="1.1"
        viewBox="0 0 40 40"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polygon
          points="0,35, 20,10 40,35"
        />
      </svg>
    </Triangle>
  </div>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipShow inherit test-class"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "color": "white",
      }
    }
  >
    <span>
      Test Text
    </span>
  </span>
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={true}
    sizing="inherit"
    style={Object {}}
    visible={true}
    width=""
  >
    <span>
      Test Text
    </span>
  </Triangle>
</div>
`;

exports[`Test disabling of a Tooltip 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit disabled nohover"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "color": "white",
      }
    }
  />
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={true}
    focus={false}
    height=""
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={false}
    sizing="inherit"
    style={Object {}}
    visible={true}
    width=""
  />
</div>
`;

exports[`Test making a Tooltip invisible 1`] = `
<div
  className="ui-tooltip tooltip tooltipMiddleRight tooltipHide inherit invisible"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "gray",
    }
  }
>
  <span
    className="ui-tooltip-content inherit"
    style={
      Object {
        "color": "white",
      }
    }
  />
  <Triangle
    backgroundColor="gray"
    borderColor="inherit"
    borderWidth="none"
    className="tooltipTriangleMiddleRight"
    color="white"
    contentEditable={false}
    direction="left"
    disabled={false}
    focus={false}
    height=""
    id=""
    location="middleRight"
    nobase={false}
    noedit={false}
    nohover={false}
    noripple={false}
    selected={false}
    show={false}
    sizing="inherit"
    style={Object {}}
    visible={false}
    width=""
  />
</div>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "backgroundColor": "gray",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "white",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "middleRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "show": false,
  "sizing": "inherit",
  "style": Object {},
  "visible": true,
  "width": "",
}
`;
